# UbratoAll

ubrato-back/: .env.exmaple  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  localization.toml  mypy.ini  pyproject.toml  typesense-config.json
ubrato-back/.github/workflows/: deploy.yml
ubrato-back/scripts/: add_docs.sql  cities_region_mg.py  cities_region_mg_typesense.py
ubrato-back/src/: config.py  exceptions.py  main.py
ubrato-back/src/broker/: nats.py
ubrato-back/src/repositories/postgres/: cities.py  database.py  draft_tender.py  logs.py  notifications.py  organization.py  profile.py  questionnaire.py  session.py  tags.py  tender.py  user.py  verification.py
ubrato-back/src/repositories/postgres/migrations/: base.py  env.py
ubrato-back/src/repositories/postgres/schemas/: city.py  document.py  draft_tender.py  draft_tender_object.py  draft_tender_service.py  logs.py  notifications.py  organiztion.py  profile.py  questionnaire.py  region.py  session.py  tender.py  tender_object.py  tender_offer.py  tender_respond.py  tender_service.py  user.py  user_favorite_contractor.py  user_favorite_tender.py  verification_requests.py
ubrato-back/src/repositories/redis/: client.py
ubrato-back/src/repositories/typesense/: client.py  contractor.py  tender.py
ubrato-back/src/routers/v1/: auth.py  dependencies.py  health.py  manager.py  organizations.py  questionnaire.py  role.py  suggest.py  tender.py  users.py  verification.py
ubrato-back/src/schemas/: update_profile.py
ubrato-back/src/services/: draft_tender.py  jwt.py  logs.py  manager.py  notification.py  organiztion.py  questionnaire.py  session.py  suggest.py  tenders.py  user.py  verification.py
ubrato-back/src/tools/: cache.py  egrul.py
ubrato-back/src/ubrato_back/: __main__.py  config.py  exceptions.py
ubrato-back/src/ubrato_back/broker/: nats.py
ubrato-back/src/ubrato_back/schemas/: create_draft_tender.py  create_tender.py  delete_account.py  questionnaire.py  survey.py  tender_respond.py  update_profile.py  verify_status_set.py
ubrato-back/src/ubrato_back/services/: __init__.py  draft_tender.py  exceptions.py  jwt.py  logs.py  manager.py  notification.py  organization.py  organiztion.py  questionnaire.py  session.py  suggest.py  survey.py  tenders.py  user.py  verification.py
ubrato-back/src/ubrato_back/tools/: cache.py  egrul.py  json_csv.py
ubrato-back/typesense_migration/: Dockerfile
ubrato-back/typesense_migration/migration/: migration.sh
ubrato-back/typesense_migration/migration/data/: migration.sh
ubrato-store/: .env.exmaple  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ubrato-store/src/ubrato_store/: __main__.py  config.py  exceptions.py
ubrato-store/src/ubrato_store/routers/: dependencies.py  s3.py
ubrato-store/src/ubrato_store/services/: jwt.py  s3.py
(+277 files in other folders)
