[project]
name = "ubrato_back"
version = "2.0.0"
description = "The user service app"
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dadata>=24.10.0",
    "fastapi>=0.115.12",
    "nats-py>=2.10.0",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "phonenumbers>=9.0.5",
    "protobuf>=6.31.0",
    "pydantic-extra-types>=2.10.4",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "types-protobuf>=6.30.2.20250516",
    "types-requests>=2.32.0.20250515",
    "typesense>=1.1.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = ["pre-commit==4.1.*"]
test = [
    "pytest==8.3.*",
    "pytest-asyncio>=0.26.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.6.1",
    "testcontainers>=4.10.0",
]
lint = [
    "mypy==1.15.*",
    "ruff==0.9.*",
    "pylint==3.3.*",
]

[project.scripts]
ubrato_back = "ubrato_back.__main__:main"

[project.urls]
Homepage = "https://github.com/KiskITDigital/UbratoAll"
Repository = "https://github.com/KiskITDigital/UbratoAll"
Issues = "https://github.com/KiskITDigital/UbratoAll/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
