[project]
name = "ubrato_store"
version = "2.0.0"
description = "The Ubrator storage app"
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
    "fastapi==0.110.0",
    "python-multipart==0.0.9",
    "uvicorn>=0.27.1",
    "pyjwt[crypto]>=2.8.0",
]

[dependency-groups]
dev = ["pre-commit==4.1.*"]
test = [
    "pytest==8.3.*",
    "pytest-asyncio>=0.26.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.6.1",
    "testcontainers>=4.10.0",
]
lint = [
    "mypy==1.15.*",
    "ruff==0.9.*",
    "pylint==3.3.*",
]

[project.scripts]
ubrato_store = "ubrato_store.__main__:main"

[project.urls]
Homepage = "https://github.com/KiskITDigital/UbratoAll"
Repository = "https://github.com/KiskITDigital/UbratoAll"
Issues = "https://github.com/KiskITDigital/UbratoAll/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
